# dothraki-asr

./: .gitignore  README.md  pyproject.toml
data/dialogue/: dothraki_dialogue.json
data/lexicon/: dothraki_lexicon.json
data/results/: batch_eval_embedding_small.json  batch_eval_finetune_small.json  batch_eval_small.json  batch_eval_tiny.json  dothraki_short_summary.json  dothraki_short_transcription.json  dothraki_short_translation.json  drogo_rhaego_speech_summary.json  drogo_rhaego_speech_transcription.json  drogo_rhaego_speech_translation.json  drogo_speech_clean_summary.json  drogo_speech_clean_transcription.json  drogo_speech_clean_translation.json
data/synthetic/: manifest.json
docs/: improvement_plan.md
notebooks/: 01_data_collection.ipynb  02_audio_preprocessing.ipynb  03_whisper_exploration.ipynb  04_phoneme_analysis.ipynb  05_dothraki_matching.ipynb  06_evaluation.ipynb
pipeline/: __init__.py  config.py  run.py
pipeline/asr/: __init__.py  embedder.py  finetuned.py  transcriber.py
pipeline/audio/: __init__.py  separator.py
pipeline/dothraki/: __init__.py  matcher.py  phonemizer.py  sequence_matcher.py  translator.py
scripts/: batch_evaluate.py  build_embedding_index.py  build_lexicon.py  build_mfcc_features.py  clips.txt  download_clips.py  finetune_whisper.py  parse_dialogue.py  synthesize_audio.py
